--- a/package.json
+++ b/package.json
@@ -5,22 +5,31 @@
   "scripts": {
     "start": "mdx-deck deck.mdx",
     "build": "mdx-deck build deck.mdx",
+    "copy-assets": "mkdir -p dist; cp -r assets dist",
     "pdf": "mdx-deck pdf deck.mdx",
     "image": "mdx-deck screenshot deck.mdx",
-    "help": "mdx-deck"
+    "help": "mdx-deck",
+    "clean": "rimraf dist",
+    "dist": "yarn clean && yarn build && yarn copy-assets && gh-pages -d dist",
+    "postinstall": "patch -Nu -r /dev/null -p1 -i mdx-deck.patch || true"
   },
   "keywords": [],
   "author": "Brent Jackson",
   "license": "MIT",
   "devDependencies": {
-    "mdx-deck": "^1.6.7",
-    "mdx-deck-code-surfer": "^0.4.1",
+    "mdx-deck": "^1.8.2",
+    "mdx-deck-code-surfer": "^0.5.5",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.4"
   },
   "name": "ECMAScript-Talk",
   "dependencies": {
     "colors": "^1.3.2",
+    "gh-pages": "^2.0.1",
+    "postinstall-postinstall": "^2.0.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.8.1",
+    "rimraf": "^2.6.3",
     "tslint-loader": "^3.5.4"
   }
 }
